added most content and fixed padding

--- a/learn-more/learn-more.html
+++ b/learn-more/learn-more.html
@@ -35,16 +35,16 @@
             </div>
         </nav>
     </header>
-    <main class="container">
-        <section>
+    <main class="p-0 m-0">
+        <section class="container-fluid p-0">
             <h2>Contraceptives and Barrier Methods</h2>
         </section>
-        <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+        <article id="top">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
         sed diam nonummy nibh euismod tincidunt ut laoreet dolore
         magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
         quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-        ut aliquip ex ea commodo consequat. </article>
-        <section class="container text-center">
+        ut aliquip ex ea commodo consequat.</article>
+        <section class="container-fluid mx-auto text-center">
             <div class="row" id="row1">
                 <section class="col-lg" id="col1">
                     <figure>
@@ -53,7 +53,7 @@
                     <article>
                         <h3></h3>
                         <h4>IUD</h4>
-                        <h6>An IUD (intrauterine device) is inserted directly into the uterus. The hormonal type can last up to 3-5 years, and the copper type can last up to 10 years. The hormonal type releases hormones to prevent pregnancy, while copper is a natural spermicide and will kill any sperm that may enter the uterus.</h6>
+                        <h6>An IUD (intrauterine device) is inserted directly into the uterus by a medical professional. The hormonal type can last up to 3-5 years, and the copper type can last up to 10 years. The hormonal type releases hormones to prevent pregnancy, while copper is a natural spermicide and will kill any sperm that may enter the uterus.</h6>
                         <p>Effectiveness: 99% </p>
                         <p>Prevents STIs: No</p>
                         <p>Cost: $0 to $1,300</p>
@@ -79,27 +79,27 @@
                     </figure>
                     <article>
                         <h4>Birth Control Shot</h4>
-                        <h6>The shot is not suitable for long-term use (2+ years) unless no other methods are viable.</h6>
+                        <h6>The shot is not suitable for long-term use (2+ years) unless no other methods are viable. If more than 2 weeks go by without getting a new shot, you may be advised to take a pregnancy test if you've been sexually active within that timeframe.</h6>
                         <p>Effectiveness: 96%</p>
-                        <p>Prevents STIs: </p>
-                        <p>Cost: </p>
-                        <p>Usage: </p>
+                        <p>Prevents STIs: No</p>
+                        <p>Cost: $0 to $150</p>
+                        <p>Usage: Lasts 3 months</p>
                     </article>
                 </section>
         </section>
-        <section class="container text-center">
+        <section class="container-fluid mx-auto text-center">
             <div class="row" id="row2">
                 <section class="col-lg" id="col4">
                     <figure>
                         <img src="./Lesbian couple-amico.png" class="col-6"></img>
                     </figure>
                     <article>
-                        <h4>Method Name</h4>
-                        <h6>Description</h6>
-                        <p>Effectiveness: </p>
-                        <p>Prevents STIs: </p>
-                        <p>Cost: </p>
-                        <p>Usage: </p>
+                        <h4>Birth Control Ring</h4>
+                        <h6>The ring is inserted into the vagina and releases hormones to prevent pregnancy. A prescription is needed to get the Ring.</h6>
+                        <p>Effectiveness: 93%</p>
+                        <p>Prevents STIs: No</p>
+                        <p>Cost: $0 to $200</p>
+                        <p>Usage: Insert and remove once a month.</p>
                     </article>
                 </section>
                 <section class="col-lg" id="col5">
@@ -107,12 +107,12 @@
                         <img src="./Female reproductive system-cuate.png" class="col-6"></img>
                     </figure>
                     <article>
-                        <h4>Method Name</h4>
-                        <h6>Description</h6>
-                        <p>Effectiveness: </p>
-                        <p>Prevents STIs: </p>
-                        <p>Cost: </p>
-                        <p>Usage: </p>
+                        <h4>Birth Control Patch</h4>
+                        <h6>The patch can be worn on certain parts of the body, and releases hormones through the skin. A prescription is needed to get the Patch.</h6>
+                        <p>Effectiveness: 93%</p>
+                        <p>Prevents STIs: No</p>
+                        <p>Cost: $0 to $150</p>
+                        <p>Usage: Replace weekly</p>
                     </article>
                 </section>
                 <section class="col-lg" id="col6">
@@ -120,29 +120,29 @@
                         <img src="./Buddha hand-amico.png" class="col-6"></img>
                     </figure>
                     <article>
-                        <h4>Method Name</h4>
-                        <h6>Description</h6>
-                        <p>Effectiveness: </p>
-                        <p>Prevents STIs: </p>
-                        <p>Cost: </p>
-                        <p>Usage: </p>
+                        <h4>Birth Control Pill</h4>
+                        <h6>The pill uses hormones to prevent pregnancy. A prescription might be needed to get the Pill.</h6>
+                        <p>Effectiveness: 93%</p>
+                        <p>Prevents STIs: No</p>
+                        <p>Cost: $0 to $50</p>
+                        <p>Usage: Take daily</p>
                     </article>
                 </section>
             </div>
         </section>
-        <section class="container text-center">
+        <section class="container-fluid mx-auto text-center">
             <div class="row" id="row3">
                 <section class="col-lg" id="col7">
                     <figure>
                         <img src="./Lesbian couple-rafiki.png" class="col-6"></img>
                     </figure>
                     <article>
-                        <h4>Method Name</h4>
-                        <h6>Description</h6>
-                        <p>Effectiveness: </p>
-                        <p>Prevents STIs: </p>
-                        <p>Cost: </p>
-                        <p>Usage: </p>
+                        <h4>Condom</h4>
+                        <h6>Condoms are worn on the penis and must be replaced with every use. Condoms are made from latex, plastic, or lambskin. Oil-based lubricants must not be used with latex, as it damages the rubber. Lambskin condoms are less effective at preventing STIs since they contain tiny holes, which are small enough to block sperm but big enough to let bacteria through. Condoms can be obtained for free from some health centers, and can be purchased online or in drugstores in packs of 3 for $2 to $6. Packs of 12 or more typically are less than $1 each.</h6>
+                        <p>Effectiveness: 87%</p>
+                        <p>Prevents STIs: Yes</p>
+                        <p>Cost: $0 to $2 for one</p>
+                        <p>Usage: Use every time</p>
                     </article>
                 </section>
                 <section class="col-lg" id="col8">
@@ -150,12 +150,12 @@
                         <img src="./Baby birth-pana.png" class="col-6"></img>
                     </figure>
                     <article>
-                        <h4>Method Name</h4>
-                        <h6>Description</h6>
-                        <p>Effectiveness: </p>
-                        <p>Prevents STIs: </p>
-                        <p>Cost: </p>
-                        <p>Usage: </p>
+                        <h4>Internal Condom</h4>
+                        <h6>Internal condoms are also known as "female" condoms, but can be used by either gender. The closed side is inserted into the vagina or anus. Internal condoms are made of a nitrile (soft plastic) outer ring and polyurethane inner ring, with the insides and outsides having a silicone-based lubricant. They can be obtained for free from some health centers, or are purchasable online or in drugstores for $2 to $3.</h6>
+                        <p>Effectiveness: 79%</p>
+                        <p>Prevents STIs: Yes</p>
+                        <p>Cost: $0 to $3 for one</p>
+                        <p>Usage: Use every time</p>
                     </article>
                 </section>
                 <section class="col-lg" id="col9">
@@ -163,27 +163,27 @@
                         <img src="./Buddha hand-cuate.png" class="col-6"></img>
                     </figure>
                     <article>
-                        <h4>Method Name</h4>
-                        <h6>Description</h6>
-                        <p>Effectiveness: </p>
-                        <p>Prevents STIs: </p>
-                        <p>Cost: </p>
-                        <p>Usage: </p>
+                        <h4>Diaphragm</h4>
+                        <h6>The Diaphragm is a shallow, bendable cup that's inserted into the vagina. It covers the cervix and must be used with spermicide. The diaphragm can keep spermicide in place near the cervix. Diaphragms come in different sizes, so a medical professional can fit one for you and provide a prescription. They can also be purchased in drugstores.</h6>
+                        <p>Effectiveness: 87%</p>
+                        <p>Prevents STIs: No</p>
+                        <p>Cost: $0 to $75</p>
+                        <p>Usage: Use every time</p>
                     </article>
                 </section>
-            <section class="container text-center">
+            <section class="container-fluid mx-auto text-center">
                 <div class="row" id="row4">
                     <section class="col-lg" id="col10">
                         <figure>
                             <img src="./Buddha-hand-pana.png" class="col-6"></img>
                         </figure>
                         <article>
-                            <h4>Method Name</h4>
-                            <h6>Description</h6>
-                            <p>Effectiveness: </p>
-                            <p>Prevents STIs: </p>
-                            <p>Cost: </p>
-                            <p>Usage: </p>
+                            <h4>Birth Control Sponge</h4>
+                            <h6>The sponge is inserted into the vagina close to the cervix and is filled with spermicide. The sponge has a small, fabric loop that makes it easier to remove. The sponge can be found in most drugstores and online.</h6>
+                            <p>Effectiveness: 78-86%</p>
+                            <p>Prevents STIs: No</p>
+                            <p>Cost: $0 to $15</p>
+                            <p>Usage: Use every time</p>
                         </article>
                     </section>
                     <section class="col-lg" id="col11">
@@ -191,12 +191,12 @@
                             <img src="./Marriage-pana.png" class="col-6"></img>
                         </figure>
                         <article>
-                            <h4>Method Name</h4>
-                            <h6>Description</h6>
-                            <p>Effectiveness: </p>
-                            <p>Prevents STIs: </p>
-                            <p>Cost: </p>
-                            <p>Usage: </p>
+                            <h4>Spermicide</h4>
+                            <h6>Spermicide is a chemical-based cream or gel that can be inserted directly into the vagina and/or placed on condoms. Spermicide can be obtained over-the-counter in most drugstores, pharmacies, and superstores where condoms are located.</h6>
+                            <p>Effectiveness: 78-86%</p>
+                            <p>Prevents STIs: No</p>
+                            <p>Cost: $0 to $270</p>
+                            <p>Usage: Use every time</p>
                         </article>
                     </section>
                     <section class="col-lg" id="col12">
@@ -204,28 +204,28 @@
                             <img src="./Female reproductive system-amico.png" class="col-6"></img>
                         </figure>
                         <article>
-                            <h4>Method Name</h4>
-                            <h6>Description</h6>
-                            <p>Effectiveness: </p>
-                            <p>Prevents STIs: </p>
-                            <p>Cost: </p>
+                            <h4>Cervical Cap</h4>
+                            <h6>The cervical cap is a small cup made of soft silicone that covers the cervix. It must also be used with spermicide. Cervical caps come in different shapes and sizes, so a medical professional can fit one for you and provide a prescription. They can also be purchased in drugstores.</h6>
+                            <p>Effectiveness: 71-86%</p>
+                            <p>Prevents STIs: No</p>
+                            <p>Cost: $0 to $90</p>
                             <p>Usage: </p>
                         </article>
                     </section>
             </section>
-            <section class="container text-center">
+            <section class="container-fluid mx-auto text-center">
                 <div class="row" id="row5">
                     <section class="col-lg" id="col13">
                         <figure>
                             <img src="./Lesbian couple-amico.png" class="col-6"></img>
                         </figure>
                         <article>
-                            <h4>Method Name</h4>
+                            <h4>Fertility Awareness Method (FAM)</h4>
                             <h6>Description</h6>
-                            <p>Effectiveness: </p>
-                            <p>Prevents STIs: </p>
-                            <p>Cost: </p>
-                            <p>Usage: </p>
+                            <p>Effectiveness: 77-98%</p>
+                            <p>Prevents STIs: No</p>
+                            <p>Cost: $0 to $20</p>
+                            <p>Usage: Use daily</p>
                         </article>
                     </section>
                     <section class="col-lg" id="col14">
@@ -233,12 +233,12 @@
                             <img src="./Female reproductive system-cuate.png" class="col-6"></img>
                         </figure>
                         <article>
-                            <h4>Method Name</h4>
+                            <h4>Withdrawal/Pull Out Method</h4>
                             <h6>Description</h6>
-                            <p>Effectiveness: </p>
-                            <p>Prevents STIs: </p>
-                            <p>Cost: </p>
-                            <p>Usage: </p>
+                            <p>Effectiveness: 78%</p>
+                            <p>Prevents STIs: No</p>
+                            <p>Cost: $0</p>
+                            <p>Usage: Use every time</p>
                         </article>
                     </section>
                     <section class="col-lg" id="col15">
@@ -246,29 +246,29 @@
                             <img src="./Buddha hand-amico.png" class="col-6"></img>
                         </figure>
                         <article>
-                            <h4>Method Name</h4>
+                            <h4>Breastfeeding as Birth Control</h4>
                             <h6>Description</h6>
-                            <p>Effectiveness: </p>
-                            <p>Prevents STIs: </p>
-                            <p>Cost: </p>
-                            <p>Usage: </p>
+                            <p>Effectiveness: 98%</p>
+                            <p>Prevents STIs: No</p>
+                            <p>Cost: $0</p>
+                            <p>Usage: Do every 4-6 hours</p>
                         </article>
                     </section>
                 </div>
             </section>
-            <section class="container text-center">
-                <div class="row" id="row3">
+            <section class="container-fluid mx-auto text-center">
+                <div class="row" id="row6">
                     <section class="col-lg" id="col16">
                         <figure>
                             <img src="./Lesbian couple-rafiki.png" class="col-6"></img>
                         </figure>
                         <article>
-                            <h4>Method Name</h4>
+                            <h4>Outercourse and Abstinence</h4>
                             <h6>Description</h6>
-                            <p>Effectiveness: </p>
-                            <p>Prevents STIs: </p>
-                            <p>Cost: </p>
-                            <p>Usage: </p>
+                            <p>Effectiveness: 100%</p>
+                            <p>Prevents STIs: Yes</p>
+                            <p>Cost: $0</p>
+                            <p>Usage: Use every time</p>
                         </article>
                     </section>
                     <section class="col-lg" id="col17">
@@ -276,12 +276,12 @@
                             <img src="./Baby birth-pana.png" class="col-6"></img>
                         </figure>
                         <article>
-                            <h4>Method Name</h4>
+                            <h4>Sterilization/Tubal Ligation/Tube Tying</h4>
                             <h6>Description</h6>
-                            <p>Effectiveness: </p>
-                            <p>Prevents STIs: </p>
-                            <p>Cost: </p>
-                            <p>Usage: </p>
+                            <p>Effectiveness: 99%</p>
+                            <p>Prevents STIs: No</p>
+                            <p>Cost: $0 to $6,000</p>
+                            <p>Usage: Lasts for life</p>
                         </article>
                     </section>
                     <section class="col-lg" id="col18">
@@ -290,17 +290,17 @@
                         </figure>
                         <article>
                             <h3></h3>
-                            <h4>Method Name</h4>
+                            <h4>Vasectomy</h4>
                             <h6>Description</h6>
-                            <p>Effectiveness: </p>
-                            <p>Prevents STIs: </p>
-                            <p>Cost: </p>
-                            <p>Usage: </p>
+                            <p>Effectiveness: 99%</p>
+                            <p>Prevents STIs: No</p>
+                            <p>Cost: $0 to $1000</p>
+                            <p>Usage: Lasts for life</p>
                         </article>
                     </section>
             </section>
     </main>
-    <footer class='row footer'>
+    <footer class='row footer mx-auto'>
         <div class=col-6> <i class="fa-solid fa-dove fa-2x dove-bottom"></i> </div>
         <div class="col-6 footer-contact">
             <h6>Comprehensive Sex Education</h6>
