--- a/shelters.html
+++ b/shelters.html
@@ -360,7 +360,19 @@ $(document).ready(function(){
                 </div>
             </div>
         </div>
-
+<section class="footer">
+     <div class="container">
+       <footer class="py-3 my-4">
+         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+           <li class="nav-item"><a href=landingpage3.html class="nav-link px-2 text-muted">Home</a></li>
+           <li class="nav-item"><a href=shelters.html class="nav-link px-2 text-muted">Need Help?</a></li>
+           <li class="nav-item"><a href=donations.html class="nav-link px-2 text-muted">Get Involved</a></li>
+           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+         </ul>
+         <p class="text-center text-muted">@ HELP HOMELESS NYC</p>
+       </footer>
+     </div>
+ </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
