--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href=landingpage3.html>Home </a>
+            <a class="nav-link active" aria-current="page" href= index.html>Home </a>
             <a class="nav-link" href= shelters.html> Need Help</a>
             <a class="nav-link" href= donations.html>Get Involved</a>
-            <a class="nav-link disabled"> About Us</a>
           </div>
         </div>
       </div>
