added more photos to stats page

--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -68,7 +68,7 @@
                         </p>
                         </div>
                         <div class="col-4">
-                             <img src="./Contraception methods-bro.png" class="photo-two"></img>
+                             <img src="./Contraception methods-cuate.png" class="photo-two"></img>
                         </div>
                         
                     </section>
