--- a/additional.html
+++ b/additional.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
            <li class="nav-item">
-            <a class="nav-link" href="additional.html">About</a>
+            <a class="nav-link" href="additional.html">Additional</a>
           </li>
         </ul>
       </div>
@@ -100,7 +100,7 @@
           <ahref="landing-page.html" class="nav-link px-2 text-white">Home</a>
         </li>
         <li class="nav-item"><a href="gallery.html" class="nav-link px-2 text-white">Gallery</a></li>
-        <li class="nav-item"><a href="additional.html" class="nav-link px-2 text-white">About</a></li>
+        <li class="nav-item"><a href="additional.html" class="nav-link px-2 text-white">Additional</a></li>
       </ul>
     </footer>
 </body>
