completed content for safe practices page

--- a/learn-more/learn-more.html
+++ b/learn-more/learn-more.html
@@ -39,11 +39,7 @@
         <section class="container-fluid p-0">
             <h2>Contraceptives and Barrier Methods</h2>
         </section>
-        <article id="top">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-        ut aliquip ex ea commodo consequat.</article>
+        <article id="top">It's important for everyone to know what forms of contraceptives, also known as birth control, are available to them. Some methods are more effective at preventing pregnancy, while other methods, known as barriers, are more protective against sexually transmitted diseases (STIs). Below, you'll find some information on all available methods and lifestyles that you should know safely practice sex in a way that's best for you.</article>
         <section class="container-fluid mx-auto text-center">
             <div class="row" id="row1">
                 <section class="col-lg" id="col1">
@@ -221,7 +217,7 @@
                         </figure>
                         <article>
                             <h4>Fertility Awareness Method (FAM)</h4>
-                            <h6>Description</h6>
+                            <h6>There are 3 variations to this method, which are the temperature, cervical mucous, and calendar methods. This is most effective when you use all three methods together, which is known as the symptothermal method. While this can be used as a method of contraception, it's more effective when trying to get pregnant rather than avoid it.</h6>
                             <p>Effectiveness: 77-98%</p>
                             <p>Prevents STIs: No</p>
                             <p>Cost: $0 to $20</p>
@@ -234,7 +230,7 @@
                         </figure>
                         <article>
                             <h4>Withdrawal/Pull Out Method</h4>
-                            <h6>Description</h6>
+                            <h6>Withdrawal is when the penis is pulled out of the vagina before ejaculation. Ejaculation must take place away from the vagina and vulva, or there may be a risk of pregnancy. Withdrawal works best when used with additional birth control methods, such as a condom.</h6>
                             <p>Effectiveness: 78%</p>
                             <p>Prevents STIs: No</p>
                             <p>Cost: $0</p>
@@ -246,8 +242,8 @@
                             <img src="./Buddha hand-amico.png" class="col-6"></img>
                         </figure>
                         <article>
-                            <h4>Breastfeeding as Birth Control</h4>
-                            <h6>Description</h6>
+                            <h4>Breastfeeding as Birth Control/ Lactational Amenorrhea (LAM)</h4>
+                            <h6>By exclusively breastfeeding for the first 6 months after a baby is born, a woman can stop ovulation and her period naturally. For this to be effective, she must nurse your baby every 4-5 hours, and every 6 hours at night. This method is called LAM for "lactational" referring to breastfeeding, and "amenorrhea" referring to not having a period. This is only effective for the first 6 months where a mother breastfeeds.</h6>
                             <p>Effectiveness: 98%</p>
                             <p>Prevents STIs: No</p>
                             <p>Cost: $0</p>
@@ -264,7 +260,7 @@
                         </figure>
                         <article>
                             <h4>Outercourse and Abstinence</h4>
-                            <h6>Description</h6>
+                            <h6>Abstinence is not having sex, while outercourse is other sexual activities aside from vaginal sex.</h6>
                             <p>Effectiveness: 100%</p>
                             <p>Prevents STIs: Yes</p>
                             <p>Cost: $0</p>
@@ -277,7 +273,7 @@
                         </figure>
                         <article>
                             <h4>Sterilization/Tubal Ligation/Tube Tying</h4>
-                            <h6>Description</h6>
+                            <h6>There are three types of sterilization, which are tubal ligation, bilateral salpingectomy, and Essure sterilization. Tubal ligation is a surgical procedure that permanently cuts, closes, or removes parts of the fallopian tubes. Bilateral salpingectomy is a surgical procedure that removes the fallopian tubes entirely. Essure sterilization is a small coil that a medical professional inserts into the fallopian tubes to block them, but is no longer available in the United States.</h6>
                             <p>Effectiveness: 99%</p>
                             <p>Prevents STIs: No</p>
                             <p>Cost: $0 to $6,000</p>
@@ -289,9 +285,8 @@
                             <img src="./Buddha hand-cuate.png" class="col-6"></img>
                         </figure>
                         <article>
-                            <h3></h3>
                             <h4>Vasectomy</h4>
-                            <h6>Description</h6>
+                            <h6>There are two types of vasectomies, which are the incision and no-scalpel (no-cut) methods. The small tubes in the scrotum that can carry semen are cut or blocked off in order to prevent pregnancy. The no-cut method is less likely to get infected or have any complications, and generally takes less time to heal. Vasectomies are usually not reversable.</h6>
                             <p>Effectiveness: 99%</p>
                             <p>Prevents STIs: No</p>
                             <p>Cost: $0 to $1000</p>
