--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href= landingpage3>HELP HOMELESS NYC</a>
+        <a class="navbar-brand" href= index.html></a>HELP HOMELESS NYC</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -157,4 +157,4 @@
    </main>
    </body>
 
-</html>
+</htm>l
