--- a/shelters.html
+++ b/shelters.html
@@ -48,18 +48,17 @@ $(document).ready(function(){
 </head>
 
 <body>
-     <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href=home>HELP HOMELESS NYC</a>
+        <a class="navbar-brand" href= index.html></a>HELP HOMELESS NYC</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home </a>
+            <a class="nav-link active" aria-current="page" href= index.html>Home </a>
             <a class="nav-link" href= shelters.html> Need Help</a>
-            <a class="nav-link" href="#">Get Involved</a>
-            <a class="nav-link disabled"> About Us</a>
+            <a class="nav-link" href= donations.html>Get Involved</a>
           </div>
         </div>
       </div>
@@ -360,7 +359,19 @@ $(document).ready(function(){
                 </div>
             </div>
         </div>
-
+<section class="footer">
+     <div class="container">
+       <footer class="py-3 my-4">
+         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+           <li class="nav-item"><a href=landingpage3.html class="nav-link px-2 text-muted">Home</a></li>
+           <li class="nav-item"><a href=shelters.html class="nav-link px-2 text-muted">Need Help?</a></li>
+           <li class="nav-item"><a href=donations.html class="nav-link px-2 text-muted">Get Involved</a></li>
+           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+         </ul>
+         <p class="text-center text-muted">@ HELP HOMELESS NYC</p>
+       </footer>
+     </div>
+   </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
