--- a/learn-more/learn-more.html
+++ b/learn-more/learn-more.html
@@ -171,7 +171,7 @@
                 <div class="row" id="row4">
                     <section class="col-lg" id="col10">
                         <figure>
-                            <img src="./Buddha-hand-pana.png" class="col-6"></img>
+                            <img src="./Female reproductive system-pana.png" class="col-6"></img>
                         </figure>
                         <article>
                             <h4>Birth Control Sponge</h4>
@@ -184,7 +184,7 @@
                     </section>
                     <section class="col-lg" id="col11">
                         <figure>
-                            <img src="./Marriage-pana.png" class="col-6"></img>
+                            <img src="./Contraception methods-pana.png" class="col-6"></img>
                         </figure>
                         <article>
                             <h4>Spermicide</h4>
@@ -197,7 +197,7 @@
                     </section>
                     <section class="col-lg" id="col12">
                         <figure>
-                            <img src="./Female reproductive system-amico.png" class="col-6"></img>
+                            <img src="./Couple-rafiki.png" class="col-6"></img>
                         </figure>
                         <article>
                             <h4>Cervical Cap</h4>
@@ -213,7 +213,7 @@
                 <div class="row" id="row5">
                     <section class="col-lg" id="col13">
                         <figure>
-                            <img src="./Lesbian couple-amico.png" class="col-6"></img>
+                            <img src="./Baby birth-cuate.png" class="col-6"></img>
                         </figure>
                         <article>
                             <h4>Fertility Awareness Method (FAM)</h4>
@@ -226,7 +226,7 @@
                     </section>
                     <section class="col-lg" id="col14">
                         <figure>
-                            <img src="./Female reproductive system-cuate.png" class="col-6"></img>
+                            <img src="./Contraception methods-amico.png" class="col-6"></img>
                         </figure>
                         <article>
                             <h4>Withdrawal/Pull Out Method</h4>
@@ -239,7 +239,7 @@
                     </section>
                     <section class="col-lg" id="col15">
                         <figure>
-                            <img src="./Buddha hand-amico.png" class="col-6"></img>
+                            <img src="./Online dating-amico.png" class="col-6"></img>
                         </figure>
                         <article>
                             <h4>Breastfeeding as Birth Control/ Lactational Amenorrhea (LAM)</h4>
@@ -269,7 +269,7 @@
                     </section>
                     <section class="col-lg" id="col17">
                         <figure>
-                            <img src="./Baby birth-pana.png" class="col-6"></img>
+                            <img src="./Pinky promise-pana.png" class="col-6"></img>
                         </figure>
                         <article>
                             <h4>Sterilization/Tubal Ligation/Tube Tying</h4>
@@ -282,7 +282,7 @@
                     </section>
                     <section class="col-lg" id="col18">
                         <figure>
-                            <img src="./Buddha hand-cuate.png" class="col-6"></img>
+                            <img src="./Contraception methods-amico.png" class="col-6"></img>
                         </figure>
                         <article>
                             <h4>Vasectomy</h4>
