--- a/shelters.html
+++ b/shelters.html
@@ -70,7 +70,7 @@ $(document).ready(function(){
         <h1>Shelters</h1>
     </div>
     <main>
-
+<h4 class="instruct">CLICK BELOW TO FIND A SHELTERS NEAR YOU </h4>
         <div class="container1">
             <div class="row">
                 <div class="col">
@@ -222,8 +222,9 @@ $(document).ready(function(){
         </div>
 
         <div class="title">
-            <h1>Pantries</h1>
+            <h1> Food Pantries</h1>
         </div>
+        <div class="instruct"><h4>CLICK BELOW TO FIND A FOOD PANTRIES NEAR YOU </h4></h4></div>
         <div class="container2">
             <div class="row">
                 <div class="col">
