changed font of title

--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -74,7 +74,7 @@
             <section class="row row-three">
                 <div class="col-8">
                     <h2>Sex-Ed Misinformation </h2>
-                    <p> There are several different campaigns that try misinform people about the reasoning behind comprehensive sex-ed. Citizens Advocating Responsible Education, Concerned Parents/Taxpayers and Coalition for Excellence in Education are a few organizations that prevent the learning of comprehensive sex-ed in school and will persuade school boards. Because of this, a lot schools may end up teaching that abstience is the best way to go only and will provide a through understanding of topics in Comprehensive Sex Education.
+                    <p> There are several different campaigns that try misinform people about the reasoning behind comprehensive sex-ed. Citizens Advocating Responsible Education, Concerned Parents/Taxpayers and Coalition for Excellence in Education are a few organizations that prevent the learning of comprehensive sex-ed in school and will persuade school boards. Because of this, a lot schools may end up teaching that abstience is the best way to go only and will not provide a through understanding of topics in Comprehensive Sex Education.
 
                     </p>
                 </div>
