--- a/additional.html
+++ b/additional.html
@@ -42,9 +42,9 @@
         <div class="side-bar">
           <h1> ARTICLE</h1>
           <div class="articles">
-            <a href="#Article-1">Article 1</a>
-            <a href="#Article-2">Article 2</a>
-            <a href="#Article-3">Article 3</a>
+            <a href= "#ocean">Article 1</a>
+            <a href= "#ecosystem">Article 2</a>
+            <a href= "#world">Article 3</a>
           </div>
         </div>
       </div>
@@ -53,6 +53,7 @@
           <div class="container text-center">
             <div class="row">
               <div class="col-8">
+                <h1 id = "ocean">Ocean</h1>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget gravida cum sociis natoque penatibus. Praesent tristique magna sit amet. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh sed. In aliquam sem fringilla ut. Aenean euismod elementum nisi quis eleifend. Sit amet dictum sit amet justo. Odio facilisis mauris sit amet. Scelerisque fermentum dui faucibus in ornare quam viverra.
               </div>
               <div class="col-4">
@@ -64,6 +65,7 @@
           <div class="container text-center">
             <div class="row">
               <div class="col-8">
+                <h1 id = "ecosystem">Ecosystem</h1>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget gravida cum sociis natoque penatibus. Praesent tristique magna sit amet. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh sed. In aliquam sem fringilla ut. Aenean euismod elementum nisi quis eleifend. Sit amet dictum sit amet justo. Odio facilisis mauris sit amet. Scelerisque fermentum dui faucibus in ornare quam viverra.
               </div>
               <div class="col-4">
@@ -73,9 +75,10 @@
             </div>
           </div>
 
-          <div class="container">
+          <div class="container text-center">
             <div class="row">
               <div class="col-8" >
+                <h1 id = "world">World</h1>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget gravida cum sociis natoque penatibus. Praesent tristique magna sit amet. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh sed. In aliquam sem fringilla ut. Aenean euismod elementum nisi quis eleifend. Sit amet dictum sit amet justo. Odio facilisis mauris sit amet. Scelerisque fermentum dui faucibus in ornare quam viverra.
               </div>
               <div class="col-4">
