updated and aligned content with pics

--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -12,28 +12,30 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
-                <i class="fa-solid fa-dove dove"></i>
-                <a class="navbar-brand" href="#"="true">Comprehensive Sex Education</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../landing-page/index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Why Sex Ed?</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../learn-more/learn-more.html">Safe Practices</a>
-                        </li>
-                    </ul>
+ <nav class="navbar navbar-expand-lg navbar-dark container-fluid nav">
+                <div class="container">
+                    <i class="fa-solid fa-dove dove fa-2x"></i>
+                    <a class="navbar-brand" href="#"="true">Comprehensive Sex Education</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="../landing-page/index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+
+                                <a class="nav-link" href="../statistics/statistics.html">Why Sex Ed?</a>
+
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../learn-more/learn-more.html">Safe Practices</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
     </header>
     <main class="container-fluid p-0 m-0">
         <section class=" title ">
@@ -45,8 +47,8 @@
         </section>
 
         <section class="lower-three justify-content-center h-100 g-0">
-            <section class="row">
-                <div class="col-8">
+            <section class="row row-one">
+                <div class="col-8 row-text">
                     <h2> Reproductive Health Rights</h2>
                     <p> Reproductive rights would be always be discussed in Comprehensive Sex-Ed. Without this learning, young women will not know what their choices are when they are pregnant. Although laws in some states have taken control over these rights for women in recent years, it is important to continuously advocate these rights that protect women and their bodies. These reproductive rights include access to birth control and safe/legal abortion care.
 
@@ -60,19 +62,19 @@
 
             </section>
             <section class="row row-two">
-                <div class="col-8">
+                <div class="col-8 row-text">
                     <h2>Safe Sex</h2>
                     <p>According to UNESCO, there is signant evidence that proves that CSE does not does not increase sexual activity, sexual risk-taking behaviour or STI/HIV infection rates. With comprehensive Sex-Ed, people can know how to prevent themselves from getting STIs by using contraceptives.To learn more about to stay safe visit safe practices on our website.
 
                     </p>
                 </div>
-                <div class="col-4">
+                <div class="col-4 row-text">
                     <img src="./Contraception methods-cuate.png" class="photo-two"></img>
                 </div>
 
             </section>
             <section class="row row-three">
-                <div class="col-8">
+                <div class="col-8 row-text">
                     <h2>Sex-Ed Misinformation </h2>
                     <p> There are several different campaigns that try misinform people about the reasoning behind comprehensive sex-ed. Citizens Advocating Responsible Education, Concerned Parents/Taxpayers and Coalition for Excellence in Education are a few organizations that prevent the learning of comprehensive sex-ed in school and will persuade school boards. Because of this, a lot schools may end up teaching that abstience is the best way to go only and will not provide a through understanding of topics in Comprehensive Sex Education.
 
