--- a/shelters.html
+++ b/shelters.html
@@ -70,7 +70,7 @@ $(document).ready(function(){
         <h1>Shelters</h1>
     </div>
     <main>
-<h4 class="instruct">CLICK BELOW TO FIND A SHELTERS NEAR YOU </h4>
+<h4 class="instruct">CLICK BELOW TO FIND SHELTERS NEAR YOU </h4>
         <div class="container1">
             <div class="row">
                 <div class="col">
