--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -2,52 +2,51 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="utilities.css" type="text/css" />
+    <link rel="stylesheet" href="./utilities.css" type="text/css" />
     <link rel="stylesheet" href="statistics.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/21b584a66f.js" crossorigin="anonymous"></script>
-    <title>A=SMR_Project</title>
+    <title>Why is Sex-Ed Important</title>
 </head>
 
 <body>
     <header>
- <nav class="navbar navbar-expand-lg navbar-dark container-fluid nav">
-                <div class="container">
-                    <i class="fa-solid fa-dove dove fa-2x"></i>
-                    <a class="navbar-brand" href="#"="true">Comprehensive Sex Education</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="../landing-page/index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
+        <nav class="navbar navbar-expand-lg navbar-dark container-fluid nav">
+            <div class="container">
+                <i class="fa-solid fa-dove dove fa-2x"></i>
+                <a class="navbar-brand" href="#"="true">Comprehensive Sex Education</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
 
-                                <a class="nav-link" href="../statistics/statistics.html">Why Sex Ed?</a>
+                            <a class="nav-link" href="../statistics/statistics.html">Why Sex Ed?</a>
 
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="../learn-more/learn-more.html">Safe Practices</a>
-                            </li>
-                        </ul>
-                    </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../learn-more/learn-more.html">Safe Practices</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
+            </div>
+        </nav>
     </header>
     <main class="container-fluid p-0 m-0">
         <section class=" title ">
-            <h3>Why is Sex-Ed Important?</h3>
+            <h1>Why is Sex-Ed Important?</h1>
         </section>
 
         <section class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/re3x5vXMSX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
-
         <section class="lower-three justify-content-center h-100 g-0">
-            <section class="row row-one">
+            <section class="row row-one ">
                 <div class="col-8 row-text">
                     <h2> Reproductive Health Rights</h2>
                     <p> Reproductive rights would be always be discussed in Comprehensive Sex-Ed. Without this learning, young women will not know what their choices are when they are pregnant. Although laws in some states have taken control over these rights for women in recent years, it is important to continuously advocate these rights that protect women and their bodies. These reproductive rights include access to birth control and safe/legal abortion care.
@@ -56,7 +55,7 @@
 
                     </p>
                 </div>
-                <div class="col-4">
+                <div class="col-4 row-image">
                     <img src="./Women's Day protest-cuate.png" class="photo-one"></img>
                 </div>
 
@@ -68,7 +67,7 @@
 
                     </p>
                 </div>
-                <div class="col-4 row-text">
+                <div class="col-4 row-image">
                     <img src="./Contraception methods-cuate.png" class="photo-two"></img>
                 </div>
 
@@ -80,7 +79,7 @@
 
                     </p>
                 </div>
-                <div class="col-4">
+                <div class="col-4 row-image">
                     <img src="./Environmental audit-cuate.png" class="photo-three"></img>
                 </div>
                 </p>
