final final final product

--- a/shelters.html
+++ b/shelters.html
@@ -224,7 +224,7 @@ $(document).ready(function(){
         <div class="title">
             <h1> Food Pantries</h1>
         </div>
-        <div class="instruct"><h4>CLICK BELOW TO FIND A FOOD PANTRIES NEAR YOU </h4></h4></div>
+        <div class="instruct"><h4>CLICK BELOW TO FIND FOOD PANTRIES NEAR YOU </h4></h4></div>
         <div class="container2">
             <div class="row">
                 <div class="col">
