--- a/donations.html
+++ b/donations.html
@@ -32,7 +32,8 @@
         <h1 class="font-weight-light">Donate to Charity</h1>
         <div class="d-flex flex-row flex-nowrap">
             <div class="card card-body">
-                <img src="img/coalition-for-homeless.png"></img>
+                <img src="img/transparenttt-pic.png" class="img-1"></img>
+                <br></br>
                 <h4 class="card-title">Coaliton for the Homeless</h4>
 
                 <div class="hello">The Coalition for the Homeless values diversity, equity, and inclusion in every aspect of our work, including our internal operations and external activities to support our mission. We are committed to cultivating a culture of respect for the dignity and value of each individual and family, and we welcome all, regardless of race, ethnicity, gender identity or expression, sexual orientation, age, veteran status, national origin, disability, household composition, housing status and/or belief system. These values are essential to our mission to assist and advocate for those who are homeless or at risk of losing their homes, champion equity in all public and private responses to homelessness, and help individuals and families from all backgrounds secure vital services, safe indoor shelter, and decent permanent homes of their own.</div>
@@ -41,7 +42,8 @@
             </div>
 
             <div class="card card-body">
-                <img src="img/bowery image.png"></img>
+                <img src="img/bowery-transparent.png" class="img-1"></img>
+                <br></br>
                 <h4 class="card-title">The Bowery Mission</h4>
                 <p>The Bowery Mission is called to minister in the New York metro area to men, women, and children caught in the cycles of poverty, hopelessness and dependencies of many kinds, and to see their lives transformed to hope, joy, lasting productivity and eternal life through the power of Jesus Christ.</p>
                 <a class="btn btn-primary" href="https://www.bowery.org/donate/form/?journitygroup=View+%24+Donor+Form&utm_source=goo
@@ -49,13 +51,15 @@ gle&utm_medium=cpc&utm_campaign=MW_TBM_116-46647_2210bwamb_20231002_2210BWAMB&ut
 " role="button">Click to Donate</a>
             </div>
             <div class="card card-body">
-                <img src="img/nyc-dept-of-homeless.png"></img>
+                <img src="img/nyc-transparent.svg" class="img-1"></img>
+                <br></br>
                 <h4 class="card-title">NYC Department of Homeless Services</h4>
                 <p>A donation to the Homeless Trust Fund helps improve the quality of life for thousands of families currently experiencing homelessness. Your donations go directly to shelters, which use the funds to buy clothing, gifts, board games, and sports equipment. The fund also helps the Department of Homeless Services (DHS) sponsor special events, such as trips to amusement parks, the circus, and baseball games. Donations may be earmarked for specific shelters.</p>
                 <a class="btn btn-primary" href="https://www1.nyc.gov/site/dhs/about/donations.page" role="button">Click to Donate</a>
             </div>
             <div class="card card-body">
-                <img src="img/catholic-charities.png"></img>
+                <img src="img/catholic-transparent.png" class="img-1"></img>
+                <br></br>
                 <h4 class="card-title">Catholic Charities USA</h4>
                 <p>Catholic Charities USA was founded over a century ago by men and women who believed that the collective efforts of the church to faithfully serve people in need could change the course of poverty in our nation.At Catholic Charities we help people, regardless of their faith, who are struggling with poverty and other complex issues. At CCUSA, our advocacy and disaster relief programs — and our support of member agencies in our network — is making tangible progress toward providing help and hope to our neighbors across the country.Our collective efforts focus on a set of strategic priorities that make a difference in the lives of people in need.</p>
                 <a class="btn btn-primary" href="https://lp.catholiccharities.us/reducingpoverty?gclid=Cj0KCQjwkt6aBhDKARIsAAyeLJ0pUxhuHIUA9fEE9B_KCae5K6Qx6Z_7AsPK2Sb9E-7CbWnr0MCa2EgaAl38EALw_wcB" role="button">Click to Donate</a>
@@ -68,7 +72,8 @@ gle&utm_medium=cpc&utm_campaign=MW_TBM_116-46647_2210bwamb_20231002_2210BWAMB&ut
         <h1 class="font-weight-light">Places to Volunteer</h1>
         <div class="d-flex flex-row flex-nowrap scrolling-wrapper">
             <div class="card card-body2">
-                <img src="img/coalition-for-homeless.png"></img>
+                <img src="img/transparenttt-pic.png" class="img-1"></img>
+                <br></br>
                 <h4 class="card-title">Coalition for the homeless</h4>
 
 
@@ -77,7 +82,8 @@ gle&utm_medium=cpc&utm_campaign=MW_TBM_116-46647_2210bwamb_20231002_2210BWAMB&ut
                 <a class="btn btn-primary " href="https://www.coalitionforthehomeless.org/volunteer/" role="button">Click to Volunteer</a>
             </div>
             <div class="card card-body2">
-                <img src="img/neighborhood-shelter2.jpeg"></img>
+                <img src="img/neighborhood-pic.png" class="img-1"></img>
+                <br></br>
                 <h4 class="card-title">Neighborhood Coalition For shelter</h4>
                 <p>NCS was founded on the premise that homelessness is the responsibility of the entire community. More than 35 years later, we are still guided by the principle that neighbors should help neighbors. This is why volunteerism has always been important to the work we do.
                     We love when volunteers come to NCS to spend time with our residents, help us in the office, or share their unique skills.</p>
@@ -85,7 +91,8 @@ gle&utm_medium=cpc&utm_campaign=MW_TBM_116-46647_2210bwamb_20231002_2210BWAMB&ut
 
             </div>
             <div class="card card-body2">
-                <img src="img/HFH-logo.jpeg"></img>
+                <img src="img/hfh-transparent.png" class="img-1"></img>
+                <br></br>
                 <h4 class="card-title">HFH</h4>
                 <p>We are able to enrich our programming and the cultural experiences of the children and adults we serve through our volunteers and partners. Volunteers come from all ages and backgrounds and are always welcome to share their time and talent with our community through a variety of available projects, events, and partnership opportunities. Previous volunteer activities have included recreational outings such as ice skating and watching a professional baseball game, as well as practical in-house workshops on financial literacy and healthy eating.
                     HFH is always seeking energetic people with experience in the arts, sciences, mathematics, and/or literacy to organize volunteer events.</p>
@@ -93,7 +100,8 @@ gle&utm_medium=cpc&utm_campaign=MW_TBM_116-46647_2210bwamb_20231002_2210BWAMB&ut
 
             </div>
             <div class="card card-body2">
-                <img src="img/bowery image.png"></img>
+                <img src="img/bowery-transparent.png" class="img-1"></img>
+                <br></br>
                 <h4 class="card-title">The Bowery Mission</h4>
                 <p>Join us in our work to empower others! Without friends like you, The Bowery Mission simply could not meet the needs of people experiencing homelessness and hunger in the New York metro area. Serve a meal, tutor and mentor clients, offer a special or professional skill. You can make an impact in someone's life today.</p>
                 <a class="btn btn-primary " href="https://www.bowery.org/volunteer/" role="button">Click to Volunteer</a>
