--- a/index.html
+++ b/index.html
@@ -14,15 +14,8 @@
 </head>
 
 <body>
-  <!-- .winter {
-  background-image: url("https://media.tenor.com/8vcd4Af2-QMAAAAd/aesthetic-snow.gif");
-}
-.homelessness{
-  background-image: url("https://media.istockphoto.com/photos/homelessness-picture-id908033426?k=20&m=908033426&s=612x612&w=0&h=KJVYzw4L8wY8zd15737fIlqzKhkzBlrv0xBjRz4UIqY=");
--->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-  <main>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href=index.html></a>HELP HOMELESS NYC</a>
@@ -38,7 +31,7 @@
         </div>
       </div>
     </nav>
-
+<main>
     <section class="carousel">
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-indicators">
@@ -47,102 +40,83 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="2000">
-            <img src="https://media-cldnry.s-nbcnews.com/image/upload/newscms/2016_11/1465656/160320-marvin-bolton-homeless-nyc-1031a.jpg" class="d-block w-100 carouselimg" alt="..." href="#winter">
+          <div class="carousel-item active" data-bs-interval="2000"><a href= #winter>
+            <img src="https://media-cldnry.s-nbcnews.com/image/upload/newscms/2016_11/1465656/160320-marvin-bolton-homeless-nyc-1031a.jpg" class="d-block w-100 img-fluid carouselimg" alt="..." ></a>
             <div class="carousel-caption d-none d-md-block">
-              <h1>Rough Winter</h1>
+              <h1 id="#homeless">Rough Winter</h1>
               <p class="primary">Winter can be deadly, and even more so for the homeless..</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="https://www.jacksonhouserehab.com/media/uwahsn1j/pexels-mart-production-8078469.jpg?anchor=center&mode=crop&width=800&height=600&rnd=132811139104200000" class="d-block w-100 carouselimg" alt="Winter">
+            <a href= #winter>
+            <img src="https://www.jacksonhouserehab.com/media/uwahsn1j/pexels-mart-production-8078469.jpg?anchor=center&mode=crop&width=800&height=600&rnd=132811139104200000" class="d-block w-100 carouselimg" ></a>
             <div class="carousel-caption d-none d-md-block">
-              <h5> Homelessness</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h1> Homelessness</h1>
+              <p>Homelessness is a bigger problem than you may think.</p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="https://cdn.sanity.io/images/0vv8moc6/psychtimes/ec5b48c7ca1ce107385d2c29c1ee8b00c5c61722-827x553.jpg" class="d-block w-100 carouselimg" alt="...">
+          <div class="carousel-item"> 
+            <a href= #flu>
+            <img src= "img/homeless.jpg" class="d-block w-100 carouselimg" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
-              <h5>FLU AND SICKNESS</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h1>FLU AND SICKNESS</h1>
+              <p>Flu and Sickness runs rampant within the homeless community.</p>
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <button class="carousel-control-prev control" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <button class="carousel-control-next control" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
     </section>
 
-
-    <!-- <section class="winter">
-      <div class="container-fluid">
-        <h1> WINTER</h1>
-        <p  class="p-3 mb-2 bg-transparent text-dark"> For people experiencing unsheltered homelessness, living outdoors poses a greater risk during winter. Cold weather can cause hypothermia – where your body loses heat faster than it can be produced. People experiencing homelessness tend to lack access to vital resources, including insulated winter clothes and warm shelter. This is especially true at night, when temperatures can drop below freezing.
-
-          When your body temperature is at 95 degrees Fahrenheit or below, it becomes critical to seek help. According to the Centers for Disease Control and Prevention (CDC), low body temperature affects the brain; hypothermia symptoms include:Memory loss, Slurred speech. Drowsiness,Shivering, Frostbite is another risk – usually affecting the nose, ears, cheeks, chin, fingers, and toes, according to the CDC. Severe cases of frostbite can lead to amputation if left untreated. People experiencing homelessness may not be able to seek medical attention, especially when there is lack of access to affordable transportation. </p>
-
-      </div>
-    </section>
-
-    <section class="homelessness">
-      <div class="container-fluid">
-        <h1> HOMELESS</h1>
-        <p class="text-bg-light p-3">
-          In recent years, homelessness in New York City has reached the highest levels since the Great Depression of the 1930s.
-          In August 2022, there were 55,036 homeless people, including 17,680 homeless children, sleeping each night in New York City’s main municipal shelter system. A near-record 19,499 single adults slept in shelters each night in August 2022.
-          Research shows that the primary cause of homelessness, particularly among families, is lack of affordable housing. Surveys of homeless families have identified the following major immediate, triggering causes of homelessness: eviction; doubled-up or severely overcrowded housing; domestic violence; job loss; and hazardous housing conditions.
-          Each night thousands of unsheltered homeless people sleep on New York City streets, in the subway system, and in other public spaces. There is no accurate measurement of New York City’s unsheltered homeless population, and recent City surveys significantly underestimate the number of unsheltered homeless New Yorkers.
-          . </p>
-      </div>
-    </section>
-    
-      <section class="flu">
-        <div class="container-fluid">
-          <h1> Spread of flu and other viruses</h1>
-          <p>
-            As people seek warmth at congregate shelters in fall and winter, it’s likely a few people entering these shelters have been impacted by coronavirus, the flu or other viruses. Like any communal setting – from workplaces to concerts – there’s an increased risk of catching a bug. Congregate shelters are a great way to house as many people as possible, but carry the risk of outbreaks. COVID-19 and the flu are easily spread in the air.
-            . </p>
-      </section> -->
+  
     <section class="splitpage"></section>
     <section class="showcase">
-      <div class="container-fluid p-0">
+      <div class="container-fluid p-0" id= "winter">
         <div class="row g-12">
-          <div class="col-lg-6 order-lg-2 text-white bg-img desc-img">
-            <img src="https://camo.envatousercontent.com/649ecc2b0cd7d405c390054c3e7fca8b141da55d/68747470733a2f2f73746f726167652e676f6f676c65617069732e636f6d2f6772617068696372697665722d3134393830352e61707073706f742e636f6d2f73726564612f416e696d61746564536e6f772f5265616479546573745f30392e676966"></img>
+          <div class= "col-lg-1"></div>
+          <div class="col-lg-5 order-lg-2 text-white bg-img desc-img">
+            <img src="https://camo.envatousercontent.com/649ecc2b0cd7d405c390054c3e7fca8b141da55d/68747470733a2f2f73746f726167652e676f6f676c65617069732e636f6d2f6772617068696372697665722d3134393830352e61707073706f742e636f6d2f73726564612f416e696d61746564536e6f772f5265616479546573745f30392e676966" class= "mobile"></img>
           </div>
-          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <div class="col-lg-5 order-lg-1 my-auto showcase-text">
             <h2>WINTER</h2>
-            <p class="lead mb-0">For people experiencing unsheltered homelessness, living outdoors poses a greater risk during winter. Cold weather can cause hypothermia – where your body loses heat faster than it can be produced. People experiencing homelessness tend to lack access to vital resources, including insulated winter clothes and warm shelter. This is especially true at night, when temperatures can drop below freezing.
+            <p class=" mb-0">For people experiencing unsheltered homelessness, living outdoors poses a greater risk during winter. Cold weather can cause hypothermia – where your body loses heat faster than it can be produced. People experiencing homelessness tend to lack access to vital resources, including insulated winter clothes and warm shelter. This is especially true at night, when temperatures can drop below freezing.
 
               When your body temperature is at 95 degrees Fahrenheit or below, it becomes critical to seek help. According to the Centers for Disease Control and Prevention (CDC), low body temperature affects the brain; hypothermia symptoms include:Memory loss, Slurred speech. Drowsiness,Shivering, Frostbite is another risk – usually affecting the nose, ears, cheeks, chin, fingers, and toes, according to the CDC. Severe cases of frostbite can lead to amputation if left untreated. People experiencing homelessness may not be able to seek medical attention, especially when there is lack of access to affordable transportation.</p>
           </div>
         </div>
-        <div class="row g-0 picholder">
-          <div class="col-lg-6 text-white showcase-img desc-img" )>
-            <img src="https://camo.envatousercontent.com/649ecc2b0cd7d405c390054c3e7fca8b141da55d/68747470733a2f2f73746f726167652e676f6f676c65617069732e636f6d2f6772617068696372697665722d3134393830352e61707073706f742e636f6d2f73726564612f416e696d61746564536e6f772f5265616479546573745f30392e676966"></img>
+         <section class="splitpage"></section>
+        <div class="row g-0 picholder" id= "homeless">
+                    <div class= "col-lg-2"></div>
+
+          <div class="col-lg-4 text-white showcase-img desc-img" )>
+            <img src="img/needhelpuhyc.jpg" class= "mobile midpicture"></img>
           </div>
-          <div class="col-lg-6 my-auto showcase-text">
-            <h2 id="#winter">HOMELESS</h2>
-            <p class="lead mb-0"> In recent years, homelessness in New York City has reached the highest levels since the Great Depression of the 1930s.
+          <div class="col-lg-4 my-auto showcase-text">
+            <h2>HOMELESS </h2>
+            <p class="mb-0"> In recent years, homelessness in New York City has reached the highest levels since the Great Depression of the 1930s.
               In August 2022, there were 55,036 homeless people, including 17,680 homeless children, sleeping each night in New York City’s main municipal shelter system. A near-record 19,499 single adults slept in shelters each night in August 2022.
               Research shows that the primary cause of homelessness, particularly among families, is lack of affordable housing. Surveys of homeless families have identified the following major immediate, triggering causes of homelessness: eviction; doubled-up or severely overcrowded housing; domestic violence; job loss; and hazardous housing conditions.
               Each night thousands of unsheltered homeless people sleep on New York City streets, in the subway system, and in other public spaces. There is no accurate measurement of New York City’s unsheltered homeless population, and recent City surveys significantly underestimate the number of unsheltered homeless New Yorkers.</p>
           </div>
         </div>
-        <div class="row g-0 picholder">
-          <div class="col-lg-6 order-lg-2 text-white showcase-img " )>
-            <img src="https://camo.envatousercontent.com/649ecc2b0cd7d405c390054c3e7fca8b141da55d/68747470733a2f2f73746f726167652e676f6f676c65617069732e636f6d2f6772617068696372697665722d3134393830352e61707073706f742e636f6d2f73726564612f416e696d61746564536e6f772f5265616479546573745f30392e676966"></img>
+         <section class="splitpage"></section>
+        <div class="row g-0 picholder" id= "flu">
+                    <div class= "col-lg-1"></div>
+
+          <div class="col-lg-5 order-lg-2 text-white showcase-img ">
+            <img src="img/sick.jpg" class= "mobile"></img>
           </div>
-          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+           
+          <div class="col-lg-5 order-lg-1 my-auto showcase-text">
             <h2>Spread of flu and other viruses</h2>
-            <p class="lead mb-0">As people seek warmth at congregate shelters in fall and winter, it’s likely a few people entering these shelters have been impacted by coronavirus, the flu or other viruses. Like any communal setting – from workplaces to concerts – there’s an increased risk of catching a bug. Congregate shelters are a great way to house as many people as possible, but carry the risk of outbreaks. COVID-19 and the flu are easily spread in the air.</p>
+            <p class=" mb-0 text">As people seek warmth at congregate shelters in fall and winter, it’s likely a few people entering these shelters have been impacted by coronavirus, the flu or other viruses. Like any communal setting – from workplaces to concerts – there’s an increased risk of catching a bug. Congregate shelters are a great way to house as many people as possible, but carry the risk of outbreaks. COVID-19 and the flu are easily spread in the air.</p>
           </div>
         </div>
       </div>
